feat: complete P2a DHT migration for SliceNodeKey, HttpNodeRouteKey, config, and WorkerNode wiring